Created measure specific stuff. Optimized sketches by profiling.

--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,17 @@
 *.swp
 *.swo
 build/
+prof/
 bin/test_*
 *.pyc
 main
-prof
+profile
+measure
 gmon.out
 callgrind.*.*
 datasets/DARPA/
 datasets/NUST/
 datasets/CAIDA/
 datasets/USC-ISI/
+datasets/Zipfian/zipfian
+datasets/Zipfian/*.dat
