--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "modules/xxHash"]
 	path = modules/xxHash
 	url = https://github.com/Cyan4973/xxHash.git
+[submodule "modules/libmeasure"]
+	path = modules/libmeasure
+	url = gitolite@mortz.dk:libmeasure
