Removed binary and added to ignore

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,5 @@ datasets/CAIDA/
 datasets/USC-ISI/
 datasets/Zipfian/zipfian
 datasets/Zipfian/*.dat
+datasets/Zipfian/weighted
+datasets/Zipfian/*.dat
