Created iterative queries for both sketch and const sketch heavy hitter implementations

--- a/.gitignore
+++ b/.gitignore
@@ -7,8 +7,8 @@ bin/test_*
 precision_hh
 precision_sketch
 profile
-measure_hh
-measure_sketch
+benchmark_hh
+benchmark_sketch
 gmon.out
 callgrind.*.*
 datasets/DARPA/
