--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "modules/libmeasure"]
 	path = modules/libmeasure
-	url = gitolite@mortz.dk:libmeasure
+	url = https://github.com/mortzdk/libmeasure.git
